# heidelberg-bike-analysis

./: .gitignore  README.md  main.py  pyproject.toml
analysis/accidents/: viz_accidents.ipynb
analysis/characterisation/: clustering.py  event.py  features.py  holiday.py  plotting.py  weather.py
analysis/characterisation/map/: stadtgrenze_heidelberg.geojson  static_map.py
analysis/characterisation/notebooks/: 01_data_overview.ipynb  01_indices_and_exploration.ipynb  02_feature_definition.ipynb  02_indices_and_exploration.ipynb  03_feature_definition.ipynb  04_clustering.ipynb  (+10 more)
analysis/general/: viz_accidents.ipynb  viz_counters.ipynb  viz_fft_cycle.ipynb  viz_stations_weather.ipynb
analysis/sanity/: sanity_counters.ipynb  sanity_helpers.py  sanity_tables.ipynb  sanity_weather.ipynb  sanity_weather_bike.ipynb
analysis/trends/: viz_trend_components.ipynb
analysis/weather/: viz_weather.ipynb
data_io/fetch/: fetch_accident_data.py  fetch_all.py  fetch_holidays.py  fetch_weather_data.py
data_io/formats/: formats.py
data_io/loader/: accident.py  base.py  bicycle.py  data_loader.py  holidays.py  weather.py
datalit/: data_util.py  dataloader.py
datalit/fetch/: fetch_cycle_data.py  fetch_weather_data.py
latex/: bibliography.bib  report.tex  report_template.tex
resources/: links.txt
resources/holidays/: README.md
src/: data_util.py
src/fetch/: fetch_cycle_data.py
src/viz/: dataloader.py  viz_accidents.ipynb  viz_counters.ipynb  viz_fft_cycle.ipynb  viz_station_correlation.ipynb  viz_trend_components.ipynb  viz_weather.ipynb
viz/: bicycle_map.py
(+45 files in other folders)
